Added support for bracketless scripts.

--- a/src/WpfMath.Example/WpfMath.Example.csproj
+++ b/src/WpfMath.Example/WpfMath.Example.csproj
@@ -3,6 +3,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net40</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\bin\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../WpfMath/WpfMath.csproj" />
   </ItemGroup>
